--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,8 +146,9 @@ p {
 }
 
 .box1 {
-	position: absolute;
-    top: 275px;
+	position:absolute;
+    margin-top: 13%;
+    margin-left:136px;
     height: 35px;
     width: 250px;
     left: 37px;
@@ -159,8 +160,8 @@ p {
 
 .box2 {
 	position: absolute;
-    top: 275px;
-    right: 49px;
+    top: 78%;
+    left: 490px;
     height: 35px;
     width: 250px;
     text-align: center;
@@ -172,10 +173,10 @@ p {
 
 .box3 {
 	position: absolute;
-    bottom: 50px;
+    bottom: -38%;
     height: 35px;
     width: 250px;
-    left: 37px;
+    left: 173px;
     text-align: center;
     background-color: white;
     color: #4aaaa5 ; 
@@ -184,10 +185,10 @@ p {
 
 .box4 {
 	position: absolute;
-    bottom: 50px;
+    bottom: -38%;
     height: 35px;
     width: 250px;
-    right: 49px;
+    left: 490px;
     text-align: center;
     background-color: white;
     color: #4aaaa5 ; 
