--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,9 @@ a {
 
 .sidebar {
 	width: 20%;
-	margin-top: -395px;
-	margin-right: 10%;
-
+	margin-top: 40px;
+	margin-left: 65%;
+	position: absolute;
 	background-color: white;
 	text-align: center;
 	padding: 15px;
@@ -57,6 +57,7 @@ a {
 	padding-right: 5px;
 	padding-left: 5px;
 	background-color: white;
+	margin-bottom: 50px;
 	
 }
 
@@ -75,6 +76,7 @@ footer {
 	width: 100%;
 	height: 20px;
 	padding-top: 15px;
+	margin-top: 50px;
 	text-align: center;
 	border-top: 10px solid #4aaaa5;
 	font-family: serif;
@@ -160,7 +162,7 @@ p {
 
 .box2 {
 	position: absolute;
-    top: 78%;
+    margin-top: 13%;
     left: 490px;
     height: 35px;
     width: 250px;
@@ -173,7 +175,7 @@ p {
 
 .box3 {
 	position: absolute;
-    bottom: -38%;
+    margin-top: 33%;
     height: 35px;
     width: 250px;
     left: 173px;
@@ -185,7 +187,7 @@ p {
 
 .box4 {
 	position: absolute;
-    bottom: -38%;
+    margin-top:33%;
     height: 35px;
     width: 250px;
     left: 490px;
@@ -216,33 +218,45 @@ p {
 	font-size: 20px;
 }
 
+
 @media screen and (max-width: 980px) 
 
 {
- 	.sidebar {width:25%; margin-top: -45%;}
+ 	.sidebar {position:static; width:25%; margin-top: -45%;}
  	.profile {width: 50%;}
  	.content {width: 100%;}
  	ul {width: 30%;}
- 	
+ 	.box1 {margin-top:18%; margin-left: 84px;}
+ 	.box2 {margin-top:45%; margin-left:-368px;}
+ 	.box3 {margin-top:71%; margin-left: -52px;}
+ 	.box4 {margin-top:98%; margin-left: -368px;}
 }	
 
 @media screen and (max-width: 768px) 
 {
-	.profile {width: 75%; padding-left: 2%;}
- 	.sidebar {width: 75%; margin-top:5%; margin-right: 11%; margin-bottom: 10%;}
+	.profile {width: 75%; padding-left:2%; }
+ 	.sidebar {position: static; width: 75%; margin-top:5%; margin-right: 11%; margin-bottom: 10%;}
  	#name{ width: 45%; }
  	ul {width:40%; margin-top: -5px; margin-right: 35px; padding:5px;}
  	li { width:32.8%; }
+ 	.box1 {margin-top:25%; margin-left: 80px;}
+ 	.box2 {margin-top:59%; margin-left:-376px;}
+ 	.box3 {margin-top:94%; margin-left: -59px;}
+ 	.box4 {margin-top:129%; margin-left: -376px;}
 }
 
 @media screen and (max-width: 640px) 
 {
 	.profile {width: 75%;}
- 	.sidebar {width: 75%}
+ 	.sidebar { position: static;width: 75%}
  	#name{ width: 100%;}
  	header {width:100%; margin-left: -10%;}
 	ul {width: 100%; background-color: white; z-index:-1; margin-right:3%;}
 	li {width:32.8%; margin-top:4%;}
+	.box1 {margin-top:27%; margin-left: 61px;}
+ 	.box2 {margin-top:66%; margin-left:-392px;}
+ 	.box3 {margin-top:107%; margin-left: -75px;}
+ 	.box4 {margin-top:146%; margin-left: -392px;}
 }
 
 
